--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
         <!-- </div> -->
 
         <div class="col-sm-6 col-sm-offset-3 info">
-            <h3 class="col-sm-12 totalPoint"> Total Point: </h3>
-            <h3 class="col-sm-12 point"> Point</h3>
-            <button class="btn-sm submit" onclick="hi()">Submit Word</button>
-            <button class="btn-sm restart">Restart Game</button>
+            <h3 class="col-sm-12 totalPoint"> Total Point: 0</h3>
+            <h3 class="col-sm-12 point"> Point: 0</h3>
+            <button class="btn-sm submit" onclick="submit()">Submit Word</button>
+            <button class="btn-sm restart" onclick="restart()">Restart Game</button>
         </div>
-        <p>
+        <!-- <p>
             Mouse pos: <b><span id="mouse-pos"></span></b>
-          </p>
+          </p> -->
     </div>
     <!-- <p>
         Mouse pos: <b><span id="mouse-pos"></span></b>
